<resources>
    <string name="app_name">Touchlogger-dirty</string>
    <string name="started_by_payload">Started by payload!</string>
    <string name="restart_zygote_dialog_message">To continue TouchLogger activation system server should be rastarted. Restart system server?</string>
    <string name="alert_title">TouchLogger Activation</string>
    <string name="restart">Restart</string>
    <string name="rollback">Rollback changes</string>
    <string name="ok">OK</string>
    <string name="inject_error_msg">Unable to inject dependency into system library!</string>
    <string name="restart_zygote_msg">Rstarting zygote…</string>
    <string name="restart_zygote_error_msg">Unable to restart zygote!</string>
    <string name="button_action_text">Make Some Fun!</string>
    <string name="msg_waiting_response">Waiting response from payload…</string>
    <string name="msg_unable_to_wait_for_payload">Unable to wait for response from exec_payload!</string>
    <string name="_x">x:</string>
    <string name="_y">y:</string>
    <string name="_0">0</string>
    <string name="payload_status">Status: %1$s</string>
    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>
    <string name="channel_name">Touch Logger</string>
    <string name="channel_description">Service collecting touch events system-wide</string>
    <string name="science">And the science gets done</string>
    <string name="payload_installed">Payload is installed successfully!</string>
    <string name="payload_install_error">Touchlogger was unable to complete payload installation!</string>
    <string name="manual_1">To install touchlogger payload manually, please follow these steps:</string>
    <string name="manual_2">1. Connect to your device using ADB shell</string>
    <string name="manual_3">2. Copy exec_payload from SD card to /data/local/tmp/exec_payload:</string>
    <string name="manual_4">3. Set exec_payload to executable:</string>
    <string name="copy_command_text">cp %1$s /data/local/tmp/exec_payload</string>
    <string name="manual_5">cd /data/local/tmp</string>
    <string name="manual_5_1">chmod 755 exec_payload</string>
    <string name="manual_6">4. Start exec_payload:</string>
    <string name="manual_7">./exec_payload</string>
    <string name="version">Version: %1$s</string>
    <string name="stack_trace_copied_to_clipboard">Stack trace copied to clipboard</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
</resources>
